gitops/environments/dev/apps/dndn-dev-hr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dndn-dev-hr
  labels:
    app.kubernetes.io/part-of: dndn
