gitops/environments/dev/apps/dndn-dev-hr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dndn-dev-hr
  namespace: dndn-dev-hr
  labels:
    app: dndn-dev-hr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dndn-dev-hr
  template:
    metadata:
      labels:
        app: dndn-dev-hr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101      # nginx user
        fsGroup: 101
      containers:
        - name: hr
          image: 387721658341.dkr.ecr.ap-northeast-2.amazonaws.com/dndn-dev-hr:7f06108b9cb218445538f3c47892972185b1f0e1
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
      volumes:
        - name: nginx-conf
          configMap:
            name: dndn-dev-hr-nginx
