gitops/environments/dev/apps/dndn-dev-hr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dndn-dev-hr
  namespace: dndn-dev-hr
  labels:
    app: dndn-dev-hr
spec:
  type: ClusterIP
  selector:
    app: dndn-dev-hr
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
